Generate a junit skeleton test class testing:
all public and non public constructors
all constructors exception
all public and non public methods
all methods exception
to every paramenters are created mock objects

--- a/resources/vm-template.properties
+++ b/resources/vm-template.properties
@@ -6,6 +6,8 @@ junit.generator.vm.1=\
 ## \n\
 ## Available variables: \n\
 ##         $entryList.methodList - List of method composites \n\
+##         $entryList.publicConstructorsCompositeList - List of public contructors \n\
+##         $entryList.nonPublicConstructorCompositeList - List of non public contructors \n\
 ##         $entryList.privateMethodList - List of private method composites \n\
 ##         $entryList.fieldList - ArrayList of class scope field names \n\
 ##         $entryList.className - class name \n\
@@ -15,7 +17,8 @@ junit.generator.vm.1=\
 ##            MethodComposite variables: \n\
 ##                $method.name - Method Name \n\
 ##                $method.signature - Full method signature in String form \n\
-##                $method.reflectionCode - list of strings representing commented out reflection code to access method (Private Methods) \n\
+##                $method.code - list of strings representing code, when are non Public the code is commented \
+  out reflection code to access method (non Public Constructor or Methods) \n\
 ##                $method.paramNames - List of Strings representing the method's parameters' names \n\
 ##                $method.paramClasses - List of Strings representing the method's parameters' classes \n\
 ## \n\
@@ -27,16 +30,28 @@ junit.generator.vm.1=\
 ######################################################################################## \n\
 ## \n\
 #macro (cap $strIn)$strIn.valueOf($strIn.charAt(0)).toUpperCase()$strIn.substring(1)#end \n\
+#macro (uncap $strIn)$strIn.valueOf($strIn.charAt(0)).toLowerCase()$strIn.substring(1)#end \n\
 ## Iterate through the list and generate testcase for every entry. \n\
 #foreach ($entry in $entryList) \n\
 #set( $testClass="${entry.className}Test") \n\
 ## \n\
-package test.$entry.packageName; \n\
+package $entry.packageName; \n\
  \n\
+\n\
+import java.lang.reflect.Method; \n\
+import java.lang.reflect.Constructor; \n\
+import java.lang.reflect.InvocationTargetException; \n\
+\n\
+import org.junit.Assert; \n\
 import junit.framework.Test; \n\
 import junit.framework.TestSuite; \n\
 import junit.framework.TestCase; \n\
- \n\
+import org.mockito.Mockito; \n\
+\n\
+#foreach($string in $entry.importList) \n\
+$string \n\
+#end \n\
+\n\
 /** \n\
  * ${entry.className} Tester. \n\
  * \n\
@@ -57,14 +72,60 @@ public class $testClass extends TestCase { \n\
         super.tearDown(); \n\
     } \n\
  \n\
+\n\
+#foreach($method in $entry.publicConstructorsCompositeList) \n\
+    /** \n\
+     * \n\
+     * Constructor: $method.signature \n\
+     * \n\
+     */ \n\
+    @Test\n\
+    public void test#cap(${method.name})() throws Exception { \n\
+        //Given:\n\
+        // Setup the system under test\n\
+        \n\
+        //Then:\n\
+        // Assert that the expected change has occurred\n\
+            Assert.fail("Missing assertions");\n\
+    } \n\
+ \n\
+#end \n\
+ \n\
+#foreach($method in $entry.nonPublicConstructorCompositeList) \n\
+    /** \n\
+     * \n\
+     * Method: $method.signature \n\
+     * \n\
+     */ \n\
+    @Test\n\
+    public void test#cap(${method.name})() throws Exception { \n\
+        //Given:\n\
+        // Setup the system under test\n\
+        \n\
+#foreach($string in $method.code) \n\
+    $string \n\
+#end \n\
+        \n\
+        //Then:\n\
+        // Assert that the expected change has occurred\n\
+        Assert.fail("Missing assertions");\n\
+    } \n\
+ \n\
+#end \n\
+\n\
 #foreach($method in $entry.methodList) \n\
     /** \n\
      * \n\
      * Method: $method.signature \n\
      * \n\
      */ \n\
-    public void test#cap(${method.name})() throws Exception { \n\
-        //TODO: Test goes here... \n\
+    public void test#cap(${method.name}() throws Exception { \n\
+        //Given:\n\
+        // Setup the system under test\n\
+        \n\
+        //Then:\n\
+        // Assert that the expected change has occurred\n\
+        Assert.fail("Missing assertions");\n\
     } \n\
  \n\
 #end \n\
@@ -76,10 +137,16 @@ public class $testClass extends TestCase { \n\
      * \n\
      */ \n\
     public void test#cap(${method.name})() throws Exception { \n\
-        //TODO: Test goes here... \n\
-    #foreach($string in $method.reflectionCode) \n\
+        //Given:\n\
+        // Setup the system under test\n\
+        \n\
+#foreach($string in $method.code) \n\
     $string \n\
     #end \n\
+        \n\
+        //Then:\n\
+        // Assert that the expected change has occurred\n\
+        Assert.fail("Missing assertions");\n\
     } \n\
  \n\
 #end \n\
@@ -94,6 +161,8 @@ junit.generator.vm.2=\
 ## \n\
 ## Available variables: \n\
 ##         $entryList.methodList - List of method composites \n\
+##         $entryList.publicConstructorsCompositeList - List of public contructors \n\
+##         $entryList.nonPublicConstructorCompositeList - List of non public contructors \n\
 ##         $entryList.privateMethodList - List of private method composites \n\
 ##         $entryList.fieldList - ArrayList of class scope field names \n\
 ##         $entryList.className - class name \n\
@@ -103,7 +172,8 @@ junit.generator.vm.2=\
 ##            MethodComposite variables: \n\
 ##                $method.name - Method Name \n\
 ##                $method.signature - Full method signature in String form \n\
-##                $method.reflectionCode - list of strings representing commented out reflection code to access method (Private Methods) \n\
+##                $method.code - list of strings representing code, when are non Public the code is commented \
+  out reflection code to access method (non Public Constructor or Methods) \n\
 ##                $method.paramNames - List of Strings representing the method's parameters' names \n\
 ##                $method.paramClasses - List of Strings representing the method's parameters' classes \n\
 ## \n\
@@ -115,15 +185,27 @@ junit.generator.vm.2=\
 ######################################################################################## \n\
 ## \n\
 #macro (cap $strIn)$strIn.valueOf($strIn.charAt(0)).toUpperCase()$strIn.substring(1)#end \n\
+#macro (uncap $strIn)$strIn.valueOf($strIn.charAt(0)).toLowerCase()$strIn.substring(1)#end \n\
 ## Iterate through the list and generate testcase for every entry. \n\
 #foreach ($entry in $entryList) \n\
 #set( $testClass="${entry.className}Test") \n\
 ## \n\
-package test.$entry.packageName; \n\
+package $entry.packageName; \n\
  \n\
+import org.junit.Assert; \n\
+\n\
+import java.lang.reflect.Constructor; \n\
+import java.lang.reflect.Method; \n\
+import java.lang.reflect.InvocationTargetException; \n\
+\n\
 import org.junit.Test; \n\
 import org.junit.Before; \n\
 import org.junit.After; \n\
+import org.mockito.Mockito; \n\
+\n\
+#foreach($string in $entry.importList) \n\
+$string \n\
+#end \n\
  \n\
 /** \n\
  * ${entry.className} Tester. \n\
@@ -142,7 +224,29 @@ public class $testClass { \n\
     public void after() throws Exception { \n\
     } \n\
  \n\
-#foreach($method in $entry.methodList) \n\
+\n\
+#foreach($method in $entry.publicConstructorsCompositeList) \n\
+    /** \n\
+     * \n\
+     * Constructor: $method.signature \n\
+     * \n\
+     */ \n\
+    @Test\n\
+    public void test#cap(${method.name})() throws Exception { \n\
+        //Given:\n\
+        // Setup the system under test\n\
+        \n\
+#foreach($string in $method.code) \n\
+    $string \n\
+#end \n\
+        //Then:\n\
+        // Assert that the expected change has occurred\n\
+        Assert.fail("Missing assertions");\n\
+    } \n\
+ \n\
+#end \n\
+ \n\
+#foreach($method in $entry.nonPublicConstructorCompositeList) \n\
     /** \n\
      * \n\
      * Method: $method.signature \n\
@@ -150,7 +254,38 @@ public class $testClass { \n\
      */ \n\
     @Test\n\
     public void test#cap(${method.name})() throws Exception { \n\
-        //TODO: Test goes here... \n\
+        //Given:\n\
+        // Setup the system under test\n\
+        \n\
+#foreach($string in $method.code) \n\
+    $string \n\
+    #end \n\
+        \n\
+        //Then:\n\
+        // Assert that the expected change has occurred\n\
+        Assert.fail("Missing assertions");\n\
+    } \n\
+ \n\
+#end \n\
+\n\
+#foreach($method in $entry.methodList) \n\
+    /** \n\
+     * \n\
+     * Constructor: $method.signature \n\
+     * \n\
+     */ \n\
+    @Test $method.expectedException\n\
+    public void test#cap(${method.name})() throws Exception { \n\
+        //Given:\n\
+        // Setup the system under test\n\
+        \n\
+#foreach($string in $method.code) \n\
+    $string \n\
+#end \n\
+        \n\
+        //Then:\n\
+        // Assert that the expected change has occurred\n\
+        Assert.fail("Missing assertions");\n\
     } \n\
  \n\
 #end \n\
@@ -161,12 +296,18 @@ public class $testClass { \n\
      * Method: $method.signature \n\
      * \n\
      */ \n\
-    @Test\n\
+    @Test $method.expectedException\n\
     public void test#cap(${method.name})() throws Exception { \n\
-        //TODO: Test goes here... \n\
-    #foreach($string in $method.reflectionCode) \n\
+        //Given:\n\
+        // Setup the system under test\n\
+        \n\
+#foreach($string in $method.code) \n\
     $string \n\
-    #end \n\
+#end \n\
+        \n\
+        //Then:\n\
+        // Assert that the expected change has occurred\n\
+        Assert.fail("Missing assertions");\n\
     } \n\
  \n\
 #end \n\
